dnl autoconf input for Compiler Construction assignment 2-4.
dnl Run autoconf to obtain a configure script from this file.

AC_INIT([assignment2],[1.0],[svhaastr@liacs.nl])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC

AC_SUBST(POBJDIR)
POBJDIR="obj/`getconf LONG_BIT`/"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
mkdir -p gen
